package fr.epsi.clem.eval.moviedatabase.retrofit.response;

import com.google.gson.annotations.SerializedName;

import java.util.List;

public class MovieResponse {

    // generate with gsonformatplus plugin

    /**
     * page : 1
     * results : [{"adult":false,"backdrop_path":"/srYya1ZlI97Au4jUYAktDe3avyA.jpg","genre_ids":[14,28,12],"id":464052,"original_language":"en","original_title":"Wonder Woman 1984","overview":"Wonder Woman comes into conflict with the Soviet Union during the Cold War in the 1980s and finds a formidable foe by the name of the Cheetah.","popularity":3178.494,"poster_path":"/8UlWHLMpgZm9bx6QYh0NFoq67TZ.jpg","release_date":"2020-12-16","title":"Wonder Woman 1984","video":false,"vote_average":7,"vote_count":3371},{"adult":false,"backdrop_path":"/lOSdUkGQmbAl5JQ3QoHqBZUbZhC.jpg","genre_ids":[53,28,878],"id":775996,"original_language":"en","original_title":"Outside the Wire","overview":"In the near future, a drone pilot is sent into a deadly militarized zone and must work with an android officer to locate a doomsday device.","popularity":2099.398,"poster_path":"/6XYLiMxHAaCsoyrVo38LBWMw2p8.jpg","release_date":"2021-01-15","title":"Outside the Wire","video":false,"vote_average":6.6,"vote_count":602},{"adult":false,"backdrop_path":"/vfuzELmhBjBTswXj2Vqxnu5ge4g.jpg","genre_ids":[53,80],"id":602269,"original_language":"en","original_title":"The Little Things","overview":"Deputy Sheriff Joe \"Deke\" Deacon joins forces with Sgt. Jim Baxter to search for a serial killer who's terrorizing Los Angeles. As they track the culprit, Baxter is unaware that the investigation is dredging up echoes of Deke's past, uncovering disturbing secrets that could threaten more than his case.","popularity":1724.771,"poster_path":"/c7VlGCCgM9GZivKSzBgzuOVxQn7.jpg","release_date":"2021-01-27","title":"The Little Things","video":false,"vote_average":6.4,"vote_count":186},{"adult":false,"backdrop_path":"/3ombg55JQiIpoPnXYb2oYdr6DtP.jpg","genre_ids":[878,28],"id":560144,"original_language":"en","original_title":"Skylines","overview":"When a virus threatens to turn the now earth-dwelling friendly alien hybrids against humans, Captain Rose Corley must lead a team of elite mercenaries on a mission to the alien world in order to save what's left of humanity.","popularity":1558.653,"poster_path":"/2W4ZvACURDyhiNnSIaFPHfNbny3.jpg","release_date":"2020-10-25","title":"Skylines","video":false,"vote_average":5.8,"vote_count":150},{"adult":false,"backdrop_path":"/nz8xWrTKZzA5A7FgxaM4kfAoO1W.jpg","genre_ids":[878,28],"id":651571,"original_language":"en","original_title":"Breach","overview":"A hardened mechanic must stay awake and maintain an interstellar ark fleeing the dying planet Earth with a few thousand lucky souls on board... the last of humanity. Unfortunately, humans are not the only passengers. A shapeshifting alien creature has taken residence, its only goal is to kill as many people as possible. The crew must think quickly to stop this menace before it destroys mankind.","popularity":1515.409,"poster_path":"/13B6onhL6FzSN2KaNeQeMML05pS.jpg","release_date":"2020-12-17","title":"Breach","video":false,"vote_average":4.8,"vote_count":200},{"adult":false,"backdrop_path":"/kf456ZqeC45XTvo6W9pW5clYKfQ.jpg","genre_ids":[10751,16,35,18,10402,14],"id":508442,"original_language":"en","original_title":"Soul","overview":"Joe Gardner is a middle school teacher with a love for jazz music. After a successful gig at the Half Note Club, he suddenly gets into an accident that separates his soul from his body and is transported to the You Seminar, a center in which souls develop and gain passions before being transported to a newborn child. Joe must enlist help from the other souls-in-training, like 22, a soul who has spent eons in the You Seminar, in order to get back to Earth.","popularity":1480.246,"poster_path":"/hm58Jw4Lw8OIeECIq5qyPYhAeRJ.jpg","release_date":"2020-12-25","title":"Soul","video":false,"vote_average":8.3,"vote_count":4552},{"adult":false,"backdrop_path":"/h9DIlghaiTxbQbt1FIwKNbQvEL.jpg","genre_ids":[28,12,53],"id":581387,"original_language":"ko","original_title":"백두산","overview":"Stagnant since 1903, at an elevation of 9000', a volcano erupts on the mythical and majestic Baekdu Mountain.","popularity":1090.256,"poster_path":"/zoeKREZ2IdAUnXISYCS0E6H5BVh.jpg","release_date":"2019-12-19","title":"Ashfall","video":false,"vote_average":6.8,"vote_count":174},{"adult":false,"backdrop_path":"/2M2JxEv3HSpjnZWjY9NOdGgfUd.jpg","genre_ids":[53,28,80,18],"id":553604,"original_language":"en","original_title":"Honest Thief","overview":"A bank robber tries to turn himself in because he's falling in love and wants to live an honest life...but when he realizes the Feds are more corrupt than him, he must fight back to clear his name.","popularity":1076.635,"poster_path":"/zeD4PabP6099gpE0STWJrJrCBCs.jpg","release_date":"2020-09-03","title":"Honest Thief","video":false,"vote_average":6.6,"vote_count":555},{"adult":false,"backdrop_path":"/jb6Ju38HmKX0bYHCmAxs8HyNeJ2.jpg","genre_ids":[878,28],"id":373571,"original_language":"en","original_title":"Godzilla: King of the Monsters","overview":"Follows the heroic efforts of the crypto-zoological agency Monarch as its members face off against a battery of god-sized monsters, including the mighty Godzilla, who collides with Mothra, Rodan, and his ultimate nemesis, the three-headed King Ghidorah. When these ancient super-species, thought to be mere myths, rise again, they all vie for supremacy, leaving humanity's very existence hanging in the balance.","popularity":1050.183,"poster_path":"/mzOHg7Q5q9yUmY0b9Esu8Qe6Nnm.jpg","release_date":"2019-05-29","title":"Godzilla: King of the Monsters","video":false,"vote_average":6.6,"vote_count":3517},{"adult":false,"backdrop_path":"/fX8e94MEWSuTJExndVYxKsmA4Hw.jpg","genre_ids":[28,12,80],"id":604822,"original_language":"zh","original_title":"急先锋","overview":"Covert security company Vanguard is the last hope of survival for an accountant after he is targeted by the world's deadliest mercenary organization.","popularity":1043.463,"poster_path":"/vYvppZMvXYheYTWVd8Rnn9nsmNp.jpg","release_date":"2020-09-30","title":"Vanguard","video":false,"vote_average":6.7,"vote_count":173},{"adult":false,"backdrop_path":"/54yOImQgj8i85u9hxxnaIQBRUuo.jpg","genre_ids":[28,80,18,53],"id":539885,"original_language":"en","original_title":"Ava","overview":"A black ops assassin is forced to fight for her own survival after a job goes dangerously wrong.","popularity":1004.798,"poster_path":"/qzA87Wf4jo1h8JMk9GilyIYvwsA.jpg","release_date":"2020-07-02","title":"Ava","video":false,"vote_average":5.6,"vote_count":1208},{"adult":false,"backdrop_path":"/9xNOiv6DZZjH7ABoUUDP0ZynouU.jpg","genre_ids":[28,80],"id":495764,"original_language":"en","original_title":"Birds of Prey (and the Fantabulous Emancipation of One Harley Quinn)","overview":"Harley Quinn joins forces with a singer, an assassin and a police detective to help a young girl who had a hit placed on her after she stole a rare diamond from a crime lord.","popularity":987.755,"poster_path":"/h4VB6m0RwcicVEZvzftYZyKXs6K.jpg","release_date":"2020-02-05","title":"Birds of Prey (and the Fantabulous Emancipation of One Harley Quinn)","video":false,"vote_average":7.1,"vote_count":6832},{"adult":false,"backdrop_path":"/7TxeZVg2evMG42p0uSbMJpWNQ8A.jpg","genre_ids":[10751,16,14],"id":520946,"original_language":"en","original_title":"100% Wolf","overview":"Freddy Lupin, heir to a proud family line of werewolves, is in for a shock when on his 14th birthday his first 'warfing' goes awry, turning him into a ferocious poodle. The pack elders give Freddy until the next moonrise to prove he has the heart of a wolf, or risk being cast out forever. With the help of an unlikely ally in a streetwise stray named Batty, Freddy must prove he's 100% Wolf.","popularity":970.825,"poster_path":"/2VrvxK4yxNCU6KVgo5TADJeBEQu.jpg","release_date":"2020-06-26","title":"100% Wolf","video":false,"vote_average":6.4,"vote_count":62},{"adult":false,"backdrop_path":"/mGJuQwMq1bEboaVTqQAK4p4zQvC.jpg","genre_ids":[28,878],"id":399566,"original_language":"en","original_title":"Godzilla vs. Kong","overview":"In a time when monsters walk the Earth, humanity\u2019s fight for its future sets Godzilla and Kong on a collision course that will see the two most powerful forces of nature on the planet collide in a spectacular battle for the ages.","popularity":947.075,"poster_path":"/3Iso4hatk3N0RTkQFAk7YFO4GGy.jpg","release_date":"2021-03-25","title":"Godzilla vs. Kong","video":false,"vote_average":0,"vote_count":0},{"adult":false,"backdrop_path":"/yImmxRokQ48PD49ughXdpKTAsAU.jpg","genre_ids":[28,12,35,10751],"id":644092,"original_language":"en","original_title":"Finding 'Ohana","overview":"Two Brooklyn siblings' summer in a rural Oahu town takes an exciting turn when a journal pointing to long-lost treasure sets them on an adventure, leading them to reconnect with their Hawaiian heritage.","popularity":908.481,"poster_path":"/tTWl37oAYRXS3D5mEHmjveXXyrN.jpg","release_date":"2021-01-29","title":"Finding 'Ohana","video":false,"vote_average":6.8,"vote_count":77},{"adult":false,"backdrop_path":"/6TPZSJ06OEXeelx1U1VIAt0j9Ry.jpg","genre_ids":[28,80,53],"id":587996,"original_language":"es","original_title":"Bajocero","overview":"When a prisoner transfer van is attacked, the cop in charge must fight those inside and outside while dealing with a silent foe: the icy temperatures.","popularity":895.019,"poster_path":"/dWSnsAGTfc8U27bWsy2RfwZs0Bs.jpg","release_date":"2021-01-29","title":"Below Zero","video":false,"vote_average":6.6,"vote_count":198},{"adult":false,"backdrop_path":"/9pHxv7TX0jOKNgnGMDP6RJ2m1GL.jpg","genre_ids":[28,53],"id":737568,"original_language":"en","original_title":"The Doorman","overview":"A former Marine turned doorman at a luxury New York City high-rise must outsmart and battle a group of art thieves and their ruthless leader \u2014 while struggling to protect her sister's family. As the thieves become increasingly desperate and violent, the doorman calls upon her deadly fighting skills to end the showdown.","popularity":842.061,"poster_path":"/pklyUbh4k1DbHdnsOMASyw7C6NH.jpg","release_date":"2020-10-01","title":"The Doorman","video":false,"vote_average":5.9,"vote_count":147},{"adult":false,"backdrop_path":"/9xeEGUZjgiKlI69jwIOi0hjKUIk.jpg","genre_ids":[14,28,12,16],"id":664767,"original_language":"en","original_title":"Mortal Kombat Legends: Scorpion's Revenge","overview":"After the vicious slaughter of his family by stone-cold mercenary Sub-Zero, Hanzo Hasashi is exiled to the torturous Netherrealm. There, in exchange for his servitude to the sinister Quan Chi, he\u2019s given a chance to avenge his family \u2013 and is resurrected as Scorpion, a lost soul bent on revenge. Back on Earthrealm, Lord Raiden gathers a team of elite warriors \u2013 Shaolin monk Liu Kang, Special Forces officer Sonya Blade and action star Johnny Cage \u2013 an unlikely band of heroes with one chance to save humanity. To do this, they must defeat Shang Tsung\u2019s horde of Outworld gladiators and reign over the Mortal Kombat tournament.","popularity":814.23,"poster_path":"/4VlXER3FImHeFuUjBShFamhIp9M.jpg","release_date":"2020-04-12","title":"Mortal Kombat Legends: Scorpion's Revenge","video":false,"vote_average":8.4,"vote_count":733},{"adult":false,"backdrop_path":"/zogWnCSztU8xvabaepQnAwsOtOt.jpg","genre_ids":[28,80,18],"id":531499,"original_language":"en","original_title":"The Tax Collector","overview":"David Cuevas is a family man who works as a gangland tax collector for high ranking Los Angeles gang members. He makes collections across the city with his partner Creeper making sure people pay up or will see retaliation. An old threat returns to Los Angeles that puts everything David loves in harm\u2019s way.","popularity":787.976,"poster_path":"/3eg0kGC2Xh0vhydJHO37Sp4cmMt.jpg","release_date":"2020-08-07","title":"The Tax Collector","video":false,"vote_average":5.8,"vote_count":243},{"adult":false,"backdrop_path":"/bblKpucB0XbyQBmfXsaRN985Rgh.jpg","genre_ids":[18],"id":458220,"original_language":"en","original_title":"Palmer","overview":"After 12 years in prison, former high school football star Eddie Palmer returns home to put his life back together\u2014and forms an unlikely bond with Sam, an outcast boy from a troubled home. But Eddie's past threatens to ruin his new life and family.","popularity":783.07,"poster_path":"/xSDdRAjxKAGi8fUBLOqSrBhJmF0.jpg","release_date":"2021-01-29","title":"Palmer","video":false,"vote_average":8.1,"vote_count":148}]
     * total_pages : 500
     * total_results : 10000
     */

    @SerializedName("page")
    public Integer page;
    @SerializedName("results")
    public List<ResultsDTO> results;
    @SerializedName("total_pages")
    public Integer totalPages;
    @SerializedName("total_results")
    public Integer totalResults;

    public Integer getPage() {
        return page;
    }

    public void setPage(Integer page) {
        this.page = page;
    }

    public List<ResultsDTO> getResults() {
        return results;
    }

    public void setResults(List<ResultsDTO> results) {
        this.results = results;
    }

    public Integer getTotalPages() {
        return totalPages;
    }

    public void setTotalPages(Integer totalPages) {
        this.totalPages = totalPages;
    }

    public Integer getTotalResults() {
        return totalResults;
    }

    public void setTotalResults(Integer totalResults) {
        this.totalResults = totalResults;
    }

    public static class ResultsDTO {
        /**
         * adult : false
         * backdrop_path : /srYya1ZlI97Au4jUYAktDe3avyA.jpg
         * genre_ids : [14,28,12]
         * id : 464052
         * original_language : en
         * original_title : Wonder Woman 1984
         * overview : Wonder Woman comes into conflict with the Soviet Union during the Cold War in the 1980s and finds a formidable foe by the name of the Cheetah.
         * popularity : 3178.494
         * poster_path : /8UlWHLMpgZm9bx6QYh0NFoq67TZ.jpg
         * release_date : 2020-12-16
         * title : Wonder Woman 1984
         * video : false
         * vote_average : 7
         * vote_count : 3371
         */

        @SerializedName("adult")
        public Boolean adult;
        @SerializedName("backdrop_path")
        public String backdropPath;
        @SerializedName("genre_ids")
        public List<Integer> genreIds;
        @SerializedName("id")
        public Integer id;
        @SerializedName("original_language")
        public String originalLanguage;
        @SerializedName("original_title")
        public String originalTitle;
        @SerializedName("overview")
        public String overview;
        @SerializedName("popularity")
        public Double popularity;
        @SerializedName("poster_path")
        public String posterPath;
        @SerializedName("release_date")
        public String releaseDate;
        @SerializedName("title")
        public String title;
        @SerializedName("video")
        public Boolean video;
        @SerializedName("vote_average")
        public Double voteAverage;
        @SerializedName("vote_count")
        public Integer voteCount;

        public Boolean getAdult() {
            return adult;
        }

        public void setAdult(Boolean adult) {
            this.adult = adult;
        }

        public String getBackdropPath() {
            return backdropPath;
        }

        public void setBackdropPath(String backdropPath) {
            this.backdropPath = backdropPath;
        }

        public List<Integer> getGenreIds() {
            return genreIds;
        }

        public void setGenreIds(List<Integer> genreIds) {
            this.genreIds = genreIds;
        }

        public Integer getId() {
            return id;
        }

        public void setId(Integer id) {
            this.id = id;
        }

        public String getOriginalLanguage() {
            return originalLanguage;
        }

        public void setOriginalLanguage(String originalLanguage) {
            this.originalLanguage = originalLanguage;
        }

        public String getOriginalTitle() {
            return originalTitle;
        }

        public void setOriginalTitle(String originalTitle) {
            this.originalTitle = originalTitle;
        }

        public String getOverview() {
            return overview;
        }

        public void setOverview(String overview) {
            this.overview = overview;
        }

        public Double getPopularity() {
            return popularity;
        }

        public void setPopularity(Double popularity) {
            this.popularity = popularity;
        }

        public String getPosterPath() {
            return posterPath;
        }

        public void setPosterPath(String posterPath) {
            this.posterPath = posterPath;
        }

        public String getReleaseDate() {
            return releaseDate;
        }

        public void setReleaseDate(String releaseDate) {
            this.releaseDate = releaseDate;
        }

        public String getTitle() {
            return title;
        }

        public void setTitle(String title) {
            this.title = title;
        }

        public Boolean getVideo() {
            return video;
        }

        public void setVideo(Boolean video) {
            this.video = video;
        }

        public Double getVoteAverage() {
            return voteAverage;
        }

        public void setVoteAverage(Double voteAverage) {
            this.voteAverage = voteAverage;
        }

        public Integer getVoteCount() {
            return voteCount;
        }

        public void setVoteCount(Integer voteCount) {
            this.voteCount = voteCount;
        }

        @Override
        public String toString() {
            return "ResultsDTO{" +
                    "adult=" + adult +
                    ", backdropPath='" + backdropPath + '\'' +
                    ", genreIds=" + genreIds +
                    ", id=" + id +
                    ", originalLanguage='" + originalLanguage + '\'' +
                    ", originalTitle='" + originalTitle + '\'' +
                    ", overview='" + overview + '\'' +
                    ", popularity=" + popularity +
                    ", posterPath='" + posterPath + '\'' +
                    ", releaseDate='" + releaseDate + '\'' +
                    ", title='" + title + '\'' +
                    ", video=" + video +
                    ", voteAverage=" + voteAverage +
                    ", voteCount=" + voteCount +
                    '}';
        }
    }
}
