@startuml
'https://plantuml.com/class-diagram

interface IMovieApi

WelcomeActivity --|> MovieListActivity
MovieListActivity --> IMovieApi
MovieListActivity --|> MovieResponse
IMovieApi -> MovieResponse
MovieResponse -> MovieDetailActivity
MovieResponse <-- MovieAdapter
MovieAdapter <-- MovieViewHolder

IMovieApi <--> RetrofitClientMovie
MovieListActivity <|--|> MovieDetailActivity

interface IMovieApi {
getMovies()
}

class RetrofitClientMovie {
Retrofit
Base_Url : String
getSingleton()
}

class WelcomeActivity {
BottomNavigationView
onCreate()
}

class MovieDetailActivity {
BottomNavigationView
onCreate()
}

class MovieResponse {
ResultsDTO: List
getResults()
}

class MovieAdapter {
RecyclerView
MovieResponse: List
onCreateViewHolder()
onBindViewHolder()
getItemCount()
}

class MovieViewHolder {
RecyclerView
MovieViewHolder: constructor
}

class MovieListActivity {
BottomNavigationView
RecyclerView
onCreate()
generateMovie()
onLoad()
}

@enduml